corona/wordpress_nodeport.yaml


apiVersion: v1
kind: Service
metadata:
  name: wordpress-nodeport-service
  namespace: ingress-nginx
  # labels:
  #   app.kubernetes.io/name: ingress-nginx
  #   app.kubernetes.io/part-of: ingress-nginx
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
  ports:
  - name: service
    port: 80
    nodePort: 30000
